<resources>
    <string name="app_name">Blocky</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_err">Username is required</string>
    <string name="password_err">Password must be at least 8 characters</string>
    <string name="incorrect_password">Incorrect Password</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome">Welcome</string>
    <string name="learn">Learn</string>
    <string name="play">Play</string>
    <string name="analog_clock">Analog Clock</string>
    <string name="next">Next</string>
    <string name="answer">Answer</string>
    <string name="check">Check</string>
    <string name="best_score">Best score</string>
    <string name="bubble">Bubble</string>
    <string name="clock_learn">Click next to learn more</string>
    <string name="clock_play">What time is it?</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="digital_clock">Digital Clock</string>
    <string name="seasons">Seasons</string>
    <string name="previous">Previous</string>
    <string name="season_play">What season is that?</string>
    <string name="season_learn">Learn the seasons using the buttons</string>
    <string name="winter">Winter</string>
    <string name="spring">Spring</string>
    <string name="autumn">Autumn</string>
    <string name="summer">Summer</string>
    <string name="days">Days</string>
    <string name="day_play">What the next day is?</string>
    <string name="day_learn">Learn the days of the week using the buttons</string>
    <string name="mon">Monday</string>
    <string name="tue">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thu">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="months">Months</string>
    <string name="month_play">What the next month is?</string>
    <string name="month_learn">Learn the months of the year using the buttons</string>
    <string name="jan">January</string>
    <string name="feb">February</string>
    <string name="mar">March</string>
    <string name="apr">April</string>
    <string name="may">May</string>
    <string name="jun">June</string>
    <string name="jul">July</string>
    <string name="aug">August</string>
    <string name="sep">September</string>
    <string name="oct">October</string>
    <string name="nov">November</string>
    <string name="dec">December</string>
    <string name="digits">Digits</string>
    <string name="digit_play">Who this digit friends are?</string>
    <string name="digit_learn">Learn the digits using the buttons</string>
    <string name="digit_play_next"><font size="16">What the next digit is?</font></string>
    <string name="digit_play_previous"><font size="16">What the previous digit is?</font></string>
    <string name="directions">Directions</string>
    <string name="direction_play">What direction does the arrow point to?</string>
    <string name="direction_learn">Learn the directions using the button</string>
    <string name="spelling">Spelling</string>
    <string name="word_play">What the missing letter is?</string>
    <string name="word_learn">Learn words using the button</string>
    <string name="multiply_play">What does it equal to?</string>
    <string name="multiply_learn">Learn multiplication using the button</string>
    <string name="multiplication">Multiplication</string>
    <string name="pictures">Pictures</string>
    <string name="picture">Where are they?</string>
    <string name="tracking">Tracking</string>
    <string name="tracking_help">Keep tracking the ball movement</string>
</resources>